@@ -18,7 +18,7 @@ static void  Phot2Obs (char *, char *);
    values into a set of photometry keywords in the science image header.
 
    Warren Hack, 1998 June 12:
-   Initial ACS version.  
+   Initial ACS version.
 
    Howard Bushouse, 2000 Aug 29:
    Initial WFC3 version.
@@ -43,26 +43,29 @@ static void  Phot2Obs (char *, char *);
    Added new FLUXCORR step to the pipeline to make the flux scaling for both chips
    equal. New keywords PHTFLAM1, PHTFLAM2, PHTRATIO added for tracking. PHTRATIO is
    the value chip2 is scaled by and is PHTFLAM1/PHTFLAM2
-   
+
    M. Sosey, 24 June 2015
    Added new code to deal with getting the value of PHTFLAM1 out of the imphttab
    when a subarray is used in chip2 -> it only has 1 set of sci extensions so the
    correct value isn't available later in doFlux. It now gets saved to the wf32d
    struct as chip1_flam and saved to the output data headers.
-   
+
    M. Sosey, 23 July 2015
    The team wants all the photometry keywords saved to all the science headers as
    well as the global file header. However, there are some which are still different
    for each chip, namely PHOTPLAM, PHOTBW and possibly PHOTFNU which is calculated.
-   For the time being I'm only going to propagate the unique keywords to the global 
+   For the time being I'm only going to propagate the unique keywords to the global
    header, I sent an email to the team explaining what needs to happen to propagate
    the others and they need to decide what to do.   #1101 and PR81584
-   
-  M. Sosey 30 July 2015
+
+   M. Sosey 30 July 2015
    Made the calculation of photfnu dependent on the chip, so PHTFLAM1 or PHTFLAM2 is
    used respective of the chip. Added flamx to all extensions and removed special subarray
-   call into the main part to always grab. 
-    
+   call into the main part to always grab.
+
+   M. Sosey: 27 March 2017
+   Update keyword descriptions   
+
  */
 
 int doPhot (WF3Info *wf32d, SingleGroup *x) {
@@ -84,7 +87,7 @@ int doPhot (WF3Info *wf32d, SingleGroup *x) {
 
     /*to enable subarrays in fluxcorr*/
     char *newobs = NULL;
-    
+
 	if (wf32d->photcorr == DUMMY)
 		return (status);
 
@@ -114,19 +117,19 @@ int doPhot (WF3Info *wf32d, SingleGroup *x) {
 		sprintf (MsgText, "Retrieved PHOTFLAM value of %g", obs.photflam);
 		trlmessage (MsgText);
 	}
-    
+
 
 
 	/* Update the photometry keyword values in the SCI and GLOBAL header. */
 	if (PutKeyFlt (&x->sci.hdr, "PHOTFLAM", obs.photflam,
-				"inverse sensitivity"))
+				"Inverse sensitivity, ergs/cm2/A/e-/"))
 		return (status);
- 
+
  	if (PutKeyFlt (x->globalhdr, "PHOTFLAM", obs.photflam,
-				"inverse sensitivity"))
+				"Inverse sensitivity, ergs/cm2/A/e-/"))
 		return (status);
-       
-    
+
+
 
     /* the value for the phtflam? which is not in the current obsmode
        should remain 0.0, which is the default. Both are here because
@@ -135,45 +138,45 @@ int doPhot (WF3Info *wf32d, SingleGroup *x) {
        is read twice, once for each chips obsmode, and every time the
        table is read the obs structure is reset  */
 
-	if (PutKeyFlt (&x->sci.hdr, "PHOTZPT", obs.photzpt, "zero point"))
+	if (PutKeyFlt (&x->sci.hdr, "PHOTZPT", obs.photzpt, "ST magnitude zero point"))
 		return (status);
-	if (PutKeyFlt (x->globalhdr, "PHOTZPT", obs.photzpt, "zero point"))
+	if (PutKeyFlt (x->globalhdr, "PHOTZPT", obs.photzpt, "ST magnitude zero point"))
 		return (status);
 
 
 
-	if (PutKeyFlt (&x->sci.hdr, "PHOTPLAM", obs.photplam, 
+	if (PutKeyFlt (&x->sci.hdr, "PHOTPLAM", obs.photplam,
 				"pivot wavelength"))
 		return (status);
 
 	if (PutKeyFlt (&x->sci.hdr, "PHOTBW", obs.photbw, "RMS bandwidth"))
 		return (status);
 
-    
+
     /*ONLY UPDATE THE CHIP THAT'S CURRENTLY PROCESSING,
-    A CONSEQUENCE OF THE IMPHTTAB CALLING FUNCTION */    
+    A CONSEQUENCE OF THE IMPHTTAB CALLING FUNCTION */
     if (wf32d->chip == 1){
         if (PutKeyFlt (&x->sci.hdr, "PHTFLAM1", obs.phtflam1,
-	    	   "photometry scaling for chip 1")){
+	    	   "Chip1 Inv Sens, same as PHOTFLAM")){
             return (status);
-        }     
+        }
         if (PutKeyFlt (x->globalhdr, "PHTFLAM1", obs.phtflam1,
-	    	   "photometry scaling for chip 1")){
+	    	   "Chip1 Inv Sens, same as PHOTFLAM")){
             return (status);
         }
     	photfnu = 3.33564e+4 * obs.phtflam1 * obs.photplam*obs.photplam;
 
-	    if (PutKeyFlt (&x->sci.hdr, "PHOTFNU", photfnu, "inverse sensitivity"))
+	    if (PutKeyFlt (&x->sci.hdr, "PHOTFNU", photfnu, "Inverse sensitivity, Jy*sec/e-"))
 		    return (status);
-        
-        
-        memcpy(&wf32d->chip1_flam,&obs.phtflam1,sizeof(double));        
-        
+
+
+        memcpy(&wf32d->chip1_flam,&obs.phtflam1,sizeof(double));
+
 	    /* UPDATE THE PHOTMODE IN OBS FOR CHIP2*/
         newobs=replace_str(obs.photmode,"uvis1","uvis2");
         strcpy(obs.photmode,newobs);
         strcpy(obsmode,newobs);
-        
+
 
 	    /* GET PHOT VALUES FROM IMPHTTAB */
 	    if (GetPhotTab (&obs, obsmode)) {
@@ -182,39 +185,39 @@ int doPhot (WF3Info *wf32d, SingleGroup *x) {
 	    }
 
         memcpy(&wf32d->chip2_flam,&obs.phtflam2,sizeof(double));
-        
+
         /*NOW PUT IT BACK*/
         newobs=replace_str(obs.photmode,"uvis2","uvis1");
         strcpy(obs.photmode,newobs);
         strcpy(obsmode,newobs);
-        
+
         if (PutKeyFlt (x->globalhdr, "PHTFLAM2", wf32d->chip2_flam,
-	    	   "photometry scaling for chip 2")){
+	    	   "Chip2 Inv Sens, use when FLUXCORR=OMIT")){
             return (status);
         }
         if (PutKeyFlt (&x->sci.hdr, "PHTFLAM2", wf32d->chip2_flam,
-	    	   "photometry scaling for chip 2")){
+	    	   "Chip2 Inv Sens, use when FLUXCORR=OMIT")){
             return (status);
         }
 
 
     }
-    
+
     if (wf32d->chip == 2){
         if (PutKeyFlt (&x->sci.hdr, "PHTFLAM2", obs.phtflam2,
-	    	   "photometry scaling for chip 2")) {
+	    	   "Chip2 Inv Sens, use when FLUXCORR=OMIT")) {
 	        return (status);
         }
         if (PutKeyFlt (x->globalhdr, "PHTFLAM2", obs.phtflam2,
-	    	   "photometry scaling for chip 2")){
+	    	   "Chip2 Inv Sens, use when FLUXCORR=OMIT")){
             return (status);
         }
     	photfnu = 3.33564e+4 * obs.phtflam2 * obs.photplam*obs.photplam;
 
-	    if (PutKeyFlt (&x->sci.hdr, "PHOTFNU", photfnu, "inverse sensitivity"))
+	    if (PutKeyFlt (&x->sci.hdr, "PHOTFNU", photfnu, "Inverse sensitivity, Jy*sec/e-"))
 		    return (status);
-        
-        
+
+
 	    /* UPDATE THE PHOTMODE IN OBS FOR CHIP1*/
         newobs=replace_str(obs.photmode,"uvis2","uvis1");
         strcpy(obs.photmode,newobs);
@@ -233,24 +236,24 @@ int doPhot (WF3Info *wf32d, SingleGroup *x) {
         newobs=replace_str(obs.photmode,"uvis1","uvis2");
         strcpy(obs.photmode,newobs);
         strcpy(obsmode,newobs);
-        
+
         if (wf32d->subarray == True){
             if (PutKeyFlt (&x->sci.hdr, "PHTFLAM1", wf32d->chip1_flam,
-	           "photometry scaling for chip 1")){
+	           "Chip1 Inv Sens, same as PHOTFLAM")){
                 return (status);
             }
         }
-        
+
         if (PutKeyFlt (x->globalhdr, "PHTFLAM1", wf32d->chip1_flam,
-	       "photometry scaling for chip 1")){
+	       "Chip1 Inv Sens, same as PHOTFLAM")){
             return (status);
         }
-             
 
-        
+
+
     }
-    
-   
+
+
 	FreePhotPar(&obs);
 	return (status);
 }
@@ -284,15 +287,13 @@ char * replace_str(char *str, char *orig, char *replace){
 
     char *p=NULL;
     static char buffer[100];
-    
+
     if (!(p=strstr(str,orig)))
         return str;
-    
+
     strncpy(buffer,str,p-str);
     buffer[p-str]='\0';
     sprintf(buffer+(p-str),"%s%s",replace,p+strlen(orig));
 
     return buffer;
 }
-    
-
