@@ -5,6 +5,9 @@
     - Fixed logic brackets in subarray prescan bias call which didn't explicitly do the gain correction in the if loop, see Issue #55
     - Fixed double statement, see Issue #63
 
+### 27-Mar-2017 - MLS - Version 3.4.1
+    - Update photometry keyword descriptions in UVIS
+
 ### 28-Sep-2016 - MLS - Version 3.4
     - Fixed memory allocation around one more print
 
